# rs-google-play

./: Cargo.toml  README.md  aliases.js  search-index.js  source-files.js
gpapi/: Cargo.toml  Easy.t.html  Endpoint.t.html  Gpapi.t.html  LICENSE  LoginRequest.t.html  PubKey.t.html  QueryParams.t.html  README.md  STATUS_PURCHASE_ERR.v.html  STATUS_PURCHASE_REQD.v.html  STATUS_PURCHASE_UNAVAIL.v.html  STATUS_UNAVAIL.v.html  SingularPtrField.t.html  all.html  base64_urlsafe.v.html  build.rs  build_login_request.v.html  build_openssl_rsa.v.html  bulk_details.v.html  constant.STATUS_PURCHASE_ERR.html  constant.STATUS_PURCHASE_REQD.html  constant.STATUS_PURCHASE_UNAVAIL.html  constant.STATUS_UNAVAIL.html  details.v.html  encrypt_login.v.html  enum.Endpoint.html  execute_request.v.html  fn.base64_urlsafe.html  fn.build_login_request.html  fn.build_openssl_rsa.html  fn.bulk_details.html  fn.details.html  fn.encrypt_login.html  fn.execute_request.html  fn.login.html  fn.parse_form_reply.html  index.html  login.v.html  parse_form_reply.v.html  (+11 more)
gpapi/apk/: Downloadable.t.html  index.html  sidebar-items.js  struct.Apk.html  trait.Downloadable.html
gpapi/consts/: GOOGLE_PUB_EXP.v.html  GOOGLE_PUB_KEY_B64.v.html  GOOGLE_PUB_MODULUS_HEXSTR.v.html  constant.GOOGLE_PUB_EXP.html  constant.GOOGLE_PUB_KEY_B64.html  constant.GOOGLE_PUB_MODULUS_HEXSTR.html  index.html  sidebar-items.js
gpapi/consts/defaults/: DEFAULT_ACCOUNT_TYPE.v.html  DEFAULT_ANDROID_VENDING.v.html  DEFAULT_AUTH_USER_AGENT.v.html  DEFAULT_CACHE_INVALIDATION_INTERVAL.v.html  DEFAULT_CLIENT_ID.v.html  DEFAULT_COUNTRY_CODE.v.html  DEFAULT_DEBUG.v.html  DEFAULT_DEVICE_COUNTRY.v.html  DEFAULT_DOWNLOAD_USER_AGENT.v.html  DEFAULT_FINSKY_AGENT.v.html  DEFAULT_FINSKY_VERSION.v.html  index.html  (+24 more)
gpapi/protos/: index.html  sidebar-items.js
gpapi/src/: consts.rs  lib.rs  main.rs
(+802 files in other folders)
