[package]
name = "gpapi"
version = "0.1.0"
authors = ["David Weinstein <dweinst@insitusec.com>"]
build = "build.rs"

[dependencies]
protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git", features = ["with-bytes", "with-serde"] }
reqwest = "0.9.11"
serde = "1"
serde_derive = "1"
openssl = "0.10.16"
base64 = "0.10.0"
byteorder = "1.2.7"
hex = "0.3.2"
lazy_static = "1.2.0"

[build-dependencies]
protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf.git" }
